Updated DELETE feature and reports

--- a/reports/execution_report.html
+++ b/reports/execution_report.html
@@ -325,7 +325,7 @@
 <div class="feature">
 <h2>
 <span class="keyword">Feature: </span>
-<span class="title">Sonar Rest Api, GET method</span>
+<span class="title">Sonar Rest Api, DELETE method</span>
 </h2>
 
 <div class="scenario">
@@ -816,7 +816,7 @@
 59 steps (<strong class="passed">59 passed</strong>)
 </p>
 <p class="time">
-0m4.175s
+0m3.565s
 </p>
 </div>
 <div class="switchers">
